--- a/index.html
+++ b/index.html
@@ -1,44 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
- <!-- Main Template CSSFile -->
- <link rel="stylesheet" href="css/global.css">
- <!-- Main notmalize CSSFile -->
- <link rel="stylesheet" href="css/normalize.css">
- <!-- Font Awesome Library -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
- <!-- Google Fonts -->
- <link rel="preconnect" href="https://fonts.googleapis.com">
- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
- <!-- Header Start -->
- <header>
-    <div class="container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <!-- Main Template CSSFile -->
+    <link rel="stylesheet" href="css/global.css" />
+    <!-- Main notmalize CSSFile -->
+    <link rel="stylesheet" href="css/normalize.css" />
+    <!-- Font Awesome Library -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Header Start -->
+    <header>
+      <div class="container">
         <a href="#" class="logo">
-            <img src="images/logo.png" alt="">
+          <img src="images/logo.png" alt="" />
         </a>
         <nav>
-            <i class="fas fa-bars toggle-menu"></i>
-            <ul>
-                <li><a class="active" href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-            <div class="form">
-                <i class="fas fa-search"></i>
-            </div>
+          <i class="fas fa-bars toggle-menu"></i>
+          <ul>
+            <li><a class="active" href="#">Home</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <div class="form">
+            <i class="fas fa-search"></i>
+          </div>
         </nav>
+      </div>
+    </header>
+    <!-- Header End -->
+
+    <!-- Landing Start -->
+    <div class="landing">
+      <div class="overlay"></div>
+      <div class="text">
+        <div class="content">
+          <h2>
+            Hello World!<br />
+            We Are Kasper We Make Art.
+          </h2>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+            Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+        </div>
+      </div>
+      <i class="fas fa-angle-left change-background fa-2x"></i>
+      <i class="fas fa-angle-right change-background fa-2x"></i>
+      <ul class="bullets">
+        <li class="active"></li>
+        <li class=""></li>
+        <li class=""></li>
+      </ul>
     </div>
- </header>
- <!-- Header End -->
-</body>
+    <!-- Landing End -->
+
+    <!-- Services Start -->
+    <div class="services">
+      <div class="container">
+        <div class="main-heading">
+          <h2>Services</h2>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+            Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+        </div>
+        <div class="services-container">
+          <div class="srv-box">
+            <i class="fas fa-desktop fa-3x"></i>
+            <div class="text">
+              <h3>Vorem amet intuitive</h3>
+              <p>
+                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                Mauris blandit aliquet elit, eget tincidunt
+              </p>
+            </div>
+          </div>
+          <div class="srv-box">
+            <i class="fas fa-cog fa-3x"></i>
+            <div class="text">
+              <h3>Vorem amet intuitive</h3>
+              <p>
+                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                Mauris blandit aliquet elit, eget tincidunt
+              </p>
+            </div>
+          </div>
+          <div class="srv-box">
+            <i class="fas fa-pencil-ruler fa-3x"></i>
+            <div class="text">
+              <h3>Vorem amet intuitive</h3>
+              <p>
+                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                Mauris blandit aliquet elit, eget tincidunt
+              </p>
+            </div>
+          </div>
+          <div class="srv-box">
+            <i class="fas fa-camera fa-3x"></i>
+            <div class="text">
+              <h3>Vorem amet intuitive</h3>
+              <p>
+                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                Mauris blandit aliquet elit, eget tincidunt
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Services End -->
+
+    <!-- Design Start -->
+    <div class="design">
+      <div class="image">
+        <img src="images/mobile.png" alt="Mobile" />
+      </div>
+
+      <div class="text">
+        <h2>Outr Design Comes With...</h2>
+        <ul>
+          <li>Responisve Design</li>
+          <li>ReMoern and Clean Design</li>
+          <li>Clean Code</li>
+          <li>Browser Friendly</li>
+        </ul>
+      </div>
+    </div>
+    <!-- Design End -->
+
+    <!-- Portfilio Start -->
+    <div class="portfolio">
+      <div class="container">
+        <div class="main-heading">
+          <h2>Portfolio</h2>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+            Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+        </div>
+        <ul class="shuffle">
+            <li class="active">All</li>
+            <li>App</li>
+            <li>Photo</li>
+            <li>Web</li>
+            <li>Print</li>
+        </ul>
+      </div>
+      <div class="images-container">
+        <div class="box">
+            <img src="images/shuffle-01.jpg" alt="">
+            <div class="caption">
+                <h4>Awesome Image</h4>
+                <p>Photography</p>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/shuffle-02.jpg" alt="">
+            <div class="caption">
+                <h4>Awesome Image</h4>
+                <p>Photography</p>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/shuffle-03.jpg" alt="">
+            <div class="caption">
+                <h4>Awesome Image</h4>
+                <p>Photography</p>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/shuffle-04.jpg" alt="">
+            <div class="caption">
+                <h4>Awesome Image</h4>
+                <p>Photography</p>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/shuffle-05.jpg" alt="">
+            <div class="caption">
+                <h4>Awesome Image</h4>
+                <p>Photography</p>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/shuffle-06.jpg" alt="">
+            <div class="caption">
+                <h4>Awesome Image</h4>
+                <p>Photography</p>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/shuffle-07.jpg" alt="">
+            <div class="caption">
+                <h4>Awesome Image</h4>
+                <p>Photography</p>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/shuffle-08.jpg" alt="">
+            <div class="caption">
+                <h4>Awesome Image</h4>
+                <p>Photography</p>
+            </div>
+        </div>
+      </div>
+      <a href="#" class="more">More</a>
+    </div>
+    <!-- Portfilio End -->
+  </body>
 </html>
