finish about us section

--- a/index.html
+++ b/index.html
@@ -231,5 +231,35 @@
       <a href="#" class="more">More</a>
     </div>
     <!-- Portfilio End -->
+
+    <!-- Video Start -->
+    <div class="video">
+        <video autoplay muted loop>
+            <source src="images/awesome-video.mp4" type="video/mp4" >
+        </video>
+        <div class="text">
+            <h2>Super Awesome Video Here</h2>
+            <p>It's all you need</p>
+            <button>See more</button>
+        </div>
+    </div>
+    <!-- Video End -->
+
+    <!-- About Start -->
+    <div class="about">
+        <div class="container">
+            <div class="main-heading">
+          <h2>About us</h2>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+            Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+        </div>
+        <img src="images/about.png" alt="">
+        </div>
+    </div>
+    <!-- About End -->
   </body>
 </html>
