--- a/index.html
+++ b/index.html
@@ -163,69 +163,69 @@
           </p>
         </div>
         <ul class="shuffle">
-            <li class="active">All</li>
-            <li>App</li>
-            <li>Photo</li>
-            <li>Web</li>
-            <li>Print</li>
+          <li class="active">All</li>
+          <li>App</li>
+          <li>Photo</li>
+          <li>Web</li>
+          <li>Print</li>
         </ul>
       </div>
       <div class="images-container">
         <div class="box">
-            <img src="images/shuffle-01.jpg" alt="">
-            <div class="caption">
-                <h4>Awesome Image</h4>
-                <p>Photography</p>
-            </div>
+          <img src="images/shuffle-01.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
         </div>
         <div class="box">
-            <img src="images/shuffle-02.jpg" alt="">
-            <div class="caption">
-                <h4>Awesome Image</h4>
-                <p>Photography</p>
-            </div>
+          <img src="images/shuffle-02.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
         </div>
         <div class="box">
-            <img src="images/shuffle-03.jpg" alt="">
-            <div class="caption">
-                <h4>Awesome Image</h4>
-                <p>Photography</p>
-            </div>
+          <img src="images/shuffle-03.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
         </div>
         <div class="box">
-            <img src="images/shuffle-04.jpg" alt="">
-            <div class="caption">
-                <h4>Awesome Image</h4>
-                <p>Photography</p>
-            </div>
+          <img src="images/shuffle-04.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
         </div>
         <div class="box">
-            <img src="images/shuffle-05.jpg" alt="">
-            <div class="caption">
-                <h4>Awesome Image</h4>
-                <p>Photography</p>
-            </div>
+          <img src="images/shuffle-05.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
         </div>
         <div class="box">
-            <img src="images/shuffle-06.jpg" alt="">
-            <div class="caption">
-                <h4>Awesome Image</h4>
-                <p>Photography</p>
-            </div>
+          <img src="images/shuffle-06.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
         </div>
         <div class="box">
-            <img src="images/shuffle-07.jpg" alt="">
-            <div class="caption">
-                <h4>Awesome Image</h4>
-                <p>Photography</p>
-            </div>
+          <img src="images/shuffle-07.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
         </div>
         <div class="box">
-            <img src="images/shuffle-08.jpg" alt="">
-            <div class="caption">
-                <h4>Awesome Image</h4>
-                <p>Photography</p>
-            </div>
+          <img src="images/shuffle-08.jpg" alt="" />
+          <div class="caption">
+            <h4>Awesome Image</h4>
+            <p>Photography</p>
+          </div>
         </div>
       </div>
       <a href="#" class="more">More</a>
@@ -234,21 +234,21 @@
 
     <!-- Video Start -->
     <div class="video">
-        <video autoplay muted loop>
-            <source src="images/awesome-video.mp4" type="video/mp4" >
-        </video>
-        <div class="text">
-            <h2>Super Awesome Video Here</h2>
-            <p>It's all you need</p>
-            <button>See more</button>
-        </div>
+      <video autoplay muted loop>
+        <source src="images/awesome-video.mp4" type="video/mp4" />
+      </video>
+      <div class="text">
+        <h2>Super Awesome Video Here</h2>
+        <p>It's all you need</p>
+        <button>See more</button>
+      </div>
     </div>
     <!-- Video End -->
 
     <!-- About Start -->
     <div class="about">
-        <div class="container">
-            <div class="main-heading">
+      <div class="container">
+        <div class="main-heading">
           <h2>About us</h2>
           <p>
             Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
@@ -257,9 +257,104 @@
             Mauris blandit aliquet elit, eget tincidunt.
           </p>
         </div>
-        <img src="images/about.png" alt="">
-        </div>
+        <img src="images/about.png" alt="" />
+      </div>
     </div>
     <!-- About End -->
+
+    <!-- Stats Start -->
+    <div class="stats">
+      <div class="container">
+        <div class="box">
+          <i class="fas fa-mug-hot"></i>
+          <div class="number">1,236</div>
+          <p>Coffee Drinks</p>
+        </div>
+        <div class="box">
+          <i class="fas fa-folder"></i>
+          <div class="number">256</div>
+          <p>Completed Projects</p>
+        </div>
+        <div class="box">
+          <i class="fas fa-envelope"></i>
+          <div class="number">1,743</div>
+          <p>Mail Sent</p>
+        </div>
+        <div class="box">
+          <i class="fas fa-trophy"></i>
+          <div class="number">17</div>
+          <p>Awards Received</p>
+        </div>
+      </div>
+    </div>
+    <!-- Stats End -->
+
+    <!-- Skills Start -->
+
+    <div class="skills">
+      <div class="container">
+        <div class="testimonials">
+          <h3>Testimonials</h3>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+          <div class="content">
+            <img src="images/skills-01.jpg" alt="" />
+            <div class="text">
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt.
+              <p>John Doe, CEO</p>
+            </div>
+          </div>
+          <div class="content">
+            <img src="images/skills-02.jpg" alt="" />
+            <div class="text">
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt.
+              <p>John Doe, CEO</p>
+            </div>
+          </div>
+          <ul class="bullets">
+            <li></li>
+            <li class="active"></li>
+            <li></li>
+          </ul>
+        </div>
+
+        <div class="our-skills">
+          <h3>Skills</h3>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+          <div class="progress-bar-holder">
+            <h4>Adobe</h4>
+            <div class="prog">
+                <span style="width: 90%" data-progress="90%""></span>
+            </div>
+          </div>
+          <div class="progress-bar-holder">
+            <h4>HTML</h4>
+            <div class="prog">
+                <span style="width: 40%" data-progress="40%""></span>
+            </div>
+          </div>
+          <div class="progress-bar-holder">
+            <h4>CSS</h4>
+            <div class="prog">
+                <span style="width: 60%" data-progress="60%""></span>
+            </div>
+          </div>
+          <div class="progress-bar-holder">
+            <h4>JS</h4>
+            <div class="prog">
+                <span style="width: 80%" data-progress="80%""></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Skills End -->
   </body>
 </html>
