finish quote section

--- a/index.html
+++ b/index.html
@@ -290,7 +290,6 @@
     <!-- Stats End -->
 
     <!-- Skills Start -->
-
     <div class="skills">
       <div class="container">
         <div class="testimonials">
@@ -356,5 +355,31 @@
       </div>
     </div>
     <!-- Skills End -->
+
+    <!-- Quote Start -->
+    <div class="quote">
+      <div class="container">
+        <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, commodi! Culpa ad sapiente doloribus.</q>
+        <span>John Doe</span>
+      </div>
+    </div>
+    <!-- Quote End -->
+
+    <!-- Pricing Start-->
+    <div class="pricing">
+      <div class="main-heading">
+          <h2>Pricing</h2>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+            Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+        </div>
+      <div class="container">
+
+      </div>
+    </div>
+    <!-- Pricing End -->
   </body>
 </html>
