--- a/index.html
+++ b/index.html
@@ -367,7 +367,8 @@
 
     <!-- Pricing Start-->
     <div class="pricing">
-      <div class="main-heading">
+      <div class="container">
+        <div class="main-heading">
           <h2>Pricing</h2>
           <p>
             Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
@@ -376,10 +377,131 @@
             Mauris blandit aliquet elit, eget tincidunt.
           </p>
         </div>
-      <div class="container">
-
+        <div class="plans">
+          <div class="plan">
+            <div class="head">
+              <h3>Basic</h3>
+              <span>19</span>
+            </div>
+            <ul>
+              <li>Feature No 1</li>
+              <li>Extra Feature</li>
+              <li>Feature No 2</li>
+              <li>Feature</li>
+            </ul>
+            <div class="foot">
+              <a href="#">Buy Now</a>
+            </div>
+          </div>
+          <div class="plan">
+            <div class="head">
+              <h3>Premium</h3>
+              <span>29</span>
+            </div>
+            <ul>
+              <li>Feature No 1</li>
+              <li>Extra Feature</li>
+              <li>Feature No 2</li>
+              <li>Feature</li>
+            </ul>
+            <div class="foot">
+              <a href="#">Buy Now</a>
+            </div>
+          </div>
+          <div class="plan">
+            <div class="head">
+              <h3>Pro</h3>
+              <span>39</span>
+            </div>
+            <ul>
+              <li>Feature No 1</li>
+              <li>Extra Feature</li>
+              <li>Feature No 2</li>
+              <li>Feature</li>
+            </ul>
+            <div class="foot">
+              <a href="#">Buy Now</a>
+            </div>
+          </div>
+          <div class="plan">
+            <div class="head">
+              <h3>Platinum</h3>
+              <span>49</span>
+            </div>
+            <ul>
+              <li>Feature No 1</li>
+              <li>Extra Feature</li>
+              <li>Feature No 2</li>
+              <li>Feature</li>
+            </ul>
+            <div class="foot">
+              <a href="#">Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <p class="contact-text">Contact us if you have a speacial request</p>
+        <a href="" class="contact-link">Contact Link</a>
       </div>
     </div>
     <!-- Pricing End -->
+
+    <!-- Subscribe Start -->
+    <div class="subscribe">
+      <div class="container">
+        <form action="">
+          <i class="far fa-envelope fa-lg"></i>
+          <input type="email" name="mail" placeholder="Your Email">
+          <input type="submit" value="Subscribe">
+        </form>
+        <p>Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at sem.</p>
+      </div>
+    </div>
+    <!-- Subscribe End -->
+
+    <!-- Contact Start -->
+    <div class="contact">
+      <div class="container">
+        <div class="main-heading">
+          <h2>Contact Us</h2>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt nibh 
+          </p>
+        </div>
+        <div class="content">
+          <form action="">
+            <input class="main-input" type="text" name="name" placeholder="Your Name">
+            <input class="main-input" type="email" name="mail" placeholder="Your E-Mail">
+            <textarea class="main-input" name="message" placeholder="Your Message" ></textarea>
+            <input type="submit" value="Send Message" >
+          </form>
+          <div class="info">
+            <h4>Get In Touch</h4>
+            <span class="phone">+963 956 56 52 74</span>
+            <span class="phone">+963 956 56 52 74</span>
+            <h4>Where We Are</h4>
+            <address> Awesome Address 17<br>New York, YC<br>123-4567-890<br>USA </address>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Contact End -->
+
+    <!-- Footer Start -->
+    <div class="footer">
+      <div class="container">
+        <img src="images/logo.png" alt="logo">
+        <p>We Are Social</p>
+        <div class="social-icon">
+          <i class="fab fa-youtube"></i>
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fas fa-home"></i>
+          <i class="fab fa-linkedin"></i>
+        </div>
+        <p class="copyright">&copy; 2024 <span>M.Tayeb</span> All rights reserved</p>
+      </div>
+    </div>
+    <!-- Footer End -->
   </body>
 </html>
